# MANTRA

./: .gitignore  Makefile  Makefile.bak  PROTOCOLS.md  README.md  ROADMAP.md  bootstrap_vm.sh  echo  extracted_report.txt  init_project.sh  pyproject.toml  pyrightconfig.json  requirements.txt
configs/: download_manifest.csv  env.yml  params.yml  paths.yml
data/: Replogie.py  schemas.py
experiments/: DEBUGGING_GUIDE.md  METRICS_METHODOLOGY.md  gating_density.md
figures/: baseline_metrics_MCH.csv
infra/: gpu-config.json
migration_kit/: AGENT_CHEATSHEET.md  DEBUGGING_TEMPLATE.md  DEVOPS_TEMPLATE.md  MANIFEST_TEMPLATE.md  METRICS_TEMPLATE.md  MIGRATION_GUIDE.md  MIGRATION_KIT.md  PROTOCOLS_TEMPLATE.md  README_TEMPLATE.md  ROADMAP_TEMPLATE.md  SETUP.md  audit_structure_template.py  cleanup_structure.py  gitignore_template  journal_example.md  journal_template.md  project_overview_example.md  pyproject_template.toml  smoke_test_template.py
scripts/: 00_fetch_data.py  01_qc_eda.py  02_cnmf.py  03_fit_theta_wls.py  04_deltaE_to_trait.py  05_metrics_and_plots.py  Replogie.py  cnmf.py  dcol_pca.py  eval_grn.py  hvg_embed.py  inspect_h5ad.py  make_grn_adj.py  make_grn_npz.py  make_gwps_artifacts_from_bulk.py  old.py  qc.py  qc_eda.ipynb  qc_eda.py  simulate.py  strip_uns_log1p.py  train_eggfm_energy.py  train_energy.py  train_grn.py  utils.py
src/mantra/: config.py  (+3 more)
tools/: bootstrap_vm.sh  cleanup.sh  cleanup_old.sh  create_gpu_any_zone.sh  dl_fig.sh  download_data.sh  download_manifest.sh  gcs_converge.sh  gcs_get.sh  init_gcs.sh  inspect_h5ad.sh  start.sh  sync.sh
(+95 files in other folders)
